src/k8s/neu/ingress.yaml
apiVersion:  networking.k8s.io/v1
kind:  Ingress
metadata:
   name:  archdr-ingress-neu
   namespace:  archref
   annotations:
       kubernetes.io/ingress.class:  azure/application-gateway
spec:
   rules:
       -  http:
              paths:
                  -  path:  /orders
                     pathType:  Prefix
                     backend:
                         service:
                             name:  orders
                            port:
                                 number: 8080
                  -  path:  /products
                     pathType:  Prefix
                     backend:
                         service:
                             name:  catalog
                            port:
                                 number: 8081
